# CourtKeyNet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
courtkeynet/: __init__.py  _test_obfuscated.py  finetune.py  inference.py  train.py  transforms.py
courtkeynet/configs/: courtkeynet.yaml  dataset.yaml  finetune.yaml
courtkeynet/cpp/: binding.cpp
courtkeynet/data/: court_dataset.py
courtkeynet/losses/: __init__.py  geometric_loss.py
courtkeynet/models/: __init__.py  court_keynet.py  courtkeynet.py  losses.py  octave.py  polar.py  qcm.py
courtkeynet/models/modules/: court_detector.py  court_feature_aggregator.py  court_specific_shape_kernel.py  fourier_feature_encoder.py  fractal_residual_block.py  keypoint_localization.py  non_local_self_similarity.py  octave_feature_extractor.py  polar_transform_attention.py  self_calibration_block.py  (+1 more)
courtkeynet/transforms/: __init__.py  transforms.py
courtkeynet/utils/: __init__.py  _safetensors.py  dataloader.py  logger.py  metrics.py  visualization.py
datasets/: court_dataset.py
examples/: predict.py  train.py
include/core/: geometric_utils.h  polar_transform.cpp  polar_transform.h  tensor.h
include/ops/: court_specific_kernel.h
include/utils/: image_utils.h  math_utils.h
src/core/: geometric_utils.cpp  tensor.cpp
src/ops/: court_specific_kernel.cpp
src/utils/: image_utils.cpp  math_utils.cpp
tools/: augment_images.py
tools/annotation_tool/: annotate.py  main.py  main_v2.py  view_labels.py
tools/benchmark/: CourtBench.jl  cli_courtbench.jl
utils/: annotation.py
(+9 files in other folders)
